Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1347,15 +1347,15 @@
         "imagen-4.0-1334.png": true,
         "imagen-4.0-1335.png": true,
         "imagen-4.0-1336.png": true,
-        "imagen-4.0-1337.png": false,
-        "imagen-4.0-1338.png": false,
-        "imagen-4.0-1339.png": false,
-        "imagen-4.0-1340.png": false,
-        "imagen-4.0-1341.png": false,
-        "imagen-4.0-1342.png": false,
-        "imagen-4.0-1343.png": false,
-        "imagen-4.0-1344.png": false,
-        "imagen-4.0-1345.png": false,
+        "imagen-4.0-1337.png": true,
+        "imagen-4.0-1338.png": true,
+        "imagen-4.0-1339.png": true,
+        "imagen-4.0-1340.png": true,
+        "imagen-4.0-1341.png": true,
+        "imagen-4.0-1342.png": true,
+        "imagen-4.0-1343.png": true,
+        "imagen-4.0-1344.png": true,
+        "imagen-4.0-1345.png": true,
         "imagen-4.0-1346.png": false,
         "imagen-4.0-1347.png": false,
         "imagen-4.0-1348.png": false,
