Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1356,33 +1356,33 @@
         "imagen-4.0-1343.png": true,
         "imagen-4.0-1344.png": true,
         "imagen-4.0-1345.png": true,
-        "imagen-4.0-1346.png": false,
-        "imagen-4.0-1347.png": false,
-        "imagen-4.0-1348.png": false,
-        "imagen-4.0-1349.png": false,
-        "imagen-4.0-1350.png": false,
-        "imagen-4.0-1351.png": false,
-        "imagen-4.0-1352.png": false,
-        "imagen-4.0-1353.png": false,
-        "imagen-4.0-1354.png": false,
-        "imagen-4.0-1355.png": false,
-        "imagen-4.0-1356.png": false,
-        "imagen-4.0-1357.png": false,
-        "imagen-4.0-1358.png": false,
-        "imagen-4.0-1359.png": false,
-        "imagen-4.0-1360.png": false,
-        "imagen-4.0-1361.png": false,
-        "imagen-4.0-1362.png": false,
-        "imagen-4.0-1363.png": false,
-        "imagen-4.0-1364.png": false,
-        "imagen-4.0-1365.png": false,
-        "imagen-4.0-1366.png": false,
-        "imagen-4.0-1367.png": false,
-        "imagen-4.0-1368.png": false,
-        "imagen-4.0-1369.png": false,
-        "imagen-4.0-1370.png": false,
-        "imagen-4.0-1371.png": false,
-        "imagen-4.0-1372.png": false,
+        "imagen-4.0-1346.png": true,
+        "imagen-4.0-1347.png": true,
+        "imagen-4.0-1348.png": true,
+        "imagen-4.0-1349.png": true,
+        "imagen-4.0-1350.png": true,
+        "imagen-4.0-1351.png": true,
+        "imagen-4.0-1352.png": true,
+        "imagen-4.0-1353.png": true,
+        "imagen-4.0-1354.png": true,
+        "imagen-4.0-1355.png": true,
+        "imagen-4.0-1356.png": true,
+        "imagen-4.0-1357.png": true,
+        "imagen-4.0-1358.png": true,
+        "imagen-4.0-1359.png": true,
+        "imagen-4.0-1360.png": true,
+        "imagen-4.0-1361.png": true,
+        "imagen-4.0-1362.png": true,
+        "imagen-4.0-1363.png": true,
+        "imagen-4.0-1364.png": true,
+        "imagen-4.0-1365.png": true,
+        "imagen-4.0-1366.png": true,
+        "imagen-4.0-1367.png": true,
+        "imagen-4.0-1368.png": true,
+        "imagen-4.0-1369.png": true,
+        "imagen-4.0-1370.png": true,
+        "imagen-4.0-1371.png": true,
+        "imagen-4.0-1372.png": true,
         "imagen-4.0-1373.png": false,
         "imagen-4.0-1374.png": false,
         "imagen-4.0-1375.png": false,
